--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 
                 Durante todos estos años el <span>arte</span> y la <span>informática</span> han sido una parte esencial en mi vida, desarrollando competencias en <span>diseño gráfico, música y fotografía</span>, además de <span>conocimientos de programación y pequeños proyectos de electrónica</span> que compatibilizo con mis estudios. Esto me permite estar <span>familiarizado con los entornos digitales</span> y tener facilidad para aprender y trabajar con nuevos programas.<br><br>
                 
-                Considero que soy una persona <span>exigente</span>  con mi trabajo, que tengo aptitudes para <span>trabajar en equipo</span>  y poseo buena capacidad de <span>adaptación</span>, además de ser competente en la <span>toma de decisiones</span>  y <span>resolución de problemas</span>. 
+                Considero que soy una persona <span>exigente</span>  con mi trabajo, que tengo aptitudes para <span>trabajar en equipo</span>  y poseo una buena capacidad de <span>adaptación</span>, además de ser competente en la <span>toma de decisiones</span>  y <span>resolución de problemas</span>. 
                 </h5>
         </div>
         <div class="sobremi-imagen">
