--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="texto-banner">
             <h3>Hola, soy <span>Daniel Ríos Muñoz</span></h3><br>
             <h4>Estudiante de Ingeniería Electrónica Industrial</h4><br>
-            <p>Esta web es mi perfil profesional. Aquí podrás encontrar mi CV, además de una entrevista virtual e información relevante sobre mí.</p>
+            <p>Esta web es mi perfil profesional. Aquí podrás encontrar mi CV e información relevante sobre mí.</p>
         </div>
     </section>
 
@@ -46,11 +46,6 @@
             <ic><i class="fas fa-file-alt"></i></ic>
             <h5>Curriculum Vitae</h5>
             <a href="https://drive.google.com/file/d/1P8f-oEOcAMxkGTxacm2UkILal29JWKqT/view" target="_blank" rel="noopener noreferrer" class="boton">Descargar</a>
-        </div>
-        <div>
-            <ic><i class="fas fa-comments"></i></ic>
-            <h5>Entrevista Virtual</h5>
-            <a href="#" target="_blank" rel="noopener noreferrer" class="boton">Acceder</a>
         </div>
     </section>
 
